--- a/index1.html
+++ b/index1.html
@@ -22,6 +22,7 @@
         
 </head>
 <body>
+    nowa
     <div id="komunikat"></div>
     <button onclick="start1()">start</button>
     <button onclick="przlacz()">przełacznik</button>
